# libpath

./: .gitignore  AUTHORS.md  CMakeLists.txt  HISTORY.md  INSTALL.md  LICENSE  NEWS.md  README.md  TODO.md  build_cmake.sh  clean_cmake.sh  libpath.vc10.sln  libpath.vc6.dsw  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_unit_tests.sh
cmake/: TargetMacros.cmake
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
examples/cpp/example.cpp.parse.1/: CMakeLists.txt  example.cpp.parse.1.cpp
include/libpath/: compare.h  compare.hpp  equate.h  equate.hpp  implicit_link.h  libpath.h  libpath.hpp  parse.h  parse.hpp  util.h  util.hpp
include/libpath/common/: basic_types.h  exceptions.hpp  internal.h  macros.h  namespace.h  portability.h  types.h  types.hpp  version.h
include/libpath/common/exceptions/: invalid_path_exception.hpp  libpath_exception.hpp
include/libpath/common/internal/: defs.h  namespace_.h  nothing_.h
include/libpath/common/portability/: compiler.h  compiler_.h  language.h  language_.h  operating_system.h  operating_system_.h
include/libpath/common/result_codes/: result_codes.h  result_codes_.h
include/libpath/common/result_codes/enumerations/: rc.h  rcx.h
include/libpath/common/shims/access/string/: StringSlice.hpp
include/libpath/common/types/: fundamental.h  fundamental_.h  slices.h  slices_.h  truthy.h  truthy_.h
include/libpath/compare/: api.h  types.h
include/libpath/compare/types/: CompareOption.h
include/libpath/compare/types/enumerations/: CompareOption.h
include/libpath/equate/: api.h  types.h
include/libpath/equate/types/: EquateOption.h
include/libpath/equate/types/enumerations/: EquateOption.h
include/libpath/parse/: api.h  types.h
include/libpath/parse/types/: ParseOption.h
include/libpath/parse/types/enumerations/: ParseOption.h
include/libpath/shared/types/: WorkingDirectoryContext.h
include/libpath/util/: api.h  types.h
projects/libpath/: pch.h
projects/libpath/_dev_pragmatics_/: warnings.msvc.10+.h
projects/libpath/vc10/: libpath.vcxproj  libpath.vcxproj.filters
projects/libpath/vc6/: libpath.dsp
src/: CMakeLists.txt  libpath.c++.api.cpp  libpath.compare.api.c  libpath.compare.internal.c  libpath.compare.internal.h  libpath.equate.api.c  libpath.equate.internal.c  libpath.equate.internal.h  libpath.parse.api.c  libpath.parse.internal.c  libpath.parse.internal.h  libpath.quality.contract.h  libpath.rc_strings.c  libpath.string.tchar.h  libpath.util.api.c
test/: CMakeLists.txt
test/scratch/: CMakeLists.txt
test/scratch/test.scratch.compare.models/: CMakeLists.txt  implicit_link.cpp  test.scratch.compare.models.cpp
test/scratch/test.scratch.compare.models/vc6/: test.scratch.compare.models.dsp
test/unit/: CMakeLists.txt
test/unit/test.unit.compare.1/: CMakeLists.txt  implicit_link.cpp  test.unit.compare.1.cpp
test/unit/test.unit.compare.1.c/: CMakeLists.txt  implicit_link.cpp  test.unit.compare.1.c.c
test/unit/test.unit.compare.1.c/vc10/: test.unit.compare.1.c.vcxproj  test.unit.compare.1.c.vcxproj.filters
test/unit/test.unit.compare.1.c/vc6/: test.unit.compare.1.c.dsp
test/unit/test.unit.compare.1/vc10/: test.unit.compare.1.vcxproj  test.unit.compare.1.vcxproj.filters
test/unit/test.unit.compare.1/vc6/: test.unit.compare.1.dsp
test/unit/test.unit.equal.1/: CMakeLists.txt  implicit_link.cpp  test.unit.equal.1.cpp
test/unit/test.unit.equal.1.c/: CMakeLists.txt  implicit_link.cpp  test.unit.equal.1.c.c
test/unit/test.unit.equal.1.c/vc10/: test.unit.equal.1.c.vcxproj  test.unit.equal.1.c.vcxproj.filters
test/unit/test.unit.equal.1.c/vc6/: test.unit.equal.1.c.dsp
test/unit/test.unit.equal.1/vc10/: test.unit.equal.1.vcxproj  test.unit.equal.1.vcxproj.filters
test/unit/test.unit.equal.1/vc6/: test.unit.equal.1.dsp
test/unit/test.unit.parse.1/: CMakeLists.txt  implicit_link.cpp  test.unit.parse.1.cpp
test/unit/test.unit.parse.1/vc10/: test.unit.parse.1.vcxproj  test.unit.parse.1.vcxproj.filters
test/unit/test.unit.parse.1/vc6/: test.unit.parse.1.dsp
test/unit/test.unit.parse.c/: CMakeLists.txt  implicit_link.cpp  test.unit.parse.c.c
test/unit/test.unit.parse.c/vc10/: test.unit.parse.c.vcxproj  test.unit.parse.c.vcxproj.filters
test/unit/test.unit.parse.c/vc6/: test.unit.parse.c.dsp
test/unit/test.unit.shim_strings/: CMakeLists.txt  test.unit.shim_strings.cpp
test/unit/test.unit.type_strings/: CMakeLists.txt  test.unit.type_strings.cpp
test/unit/test.unit.version/: CMakeLists.txt  test.unit.version.c
