
#[====[
add_subdirectory(test.unit.compare.1)
#]====]
#[====[
add_subdirectory(test.unit.compare.1.c)
#]====]
add_subdirectory(test.unit.equal.1)
add_subdirectory(test.unit.equal.1.c)
add_subdirectory(test.unit.parse.1)
add_subdirectory(test.unit.parse.c)


# ############################## end of file ############################# #

