
add_subdirectory(test.unit.compare.1)
add_subdirectory(test.unit.compare.1.c)
add_subdirectory(test.unit.equal.1)
add_subdirectory(test.unit.equal.1.c)
add_subdirectory(test.unit.parse.1)
add_subdirectory(test.unit.parse.c)
add_subdirectory(test.unit.shim_strings)
add_subdirectory(test.unit.type_strings)
add_subdirectory(test.unit.version)


# ############################## end of file ############################# #

